# JPP-interpreter

./: .gitignore  README.md  makefile  test.sh
cabaltestdir/: CHANGELOG.md  JPP-interpreter.cabal
declaration/: opis.txt  tabelka cech.txt
declaration/przyklady/: 01-typy  02-literały, arytmetyka, porównania  05-while,if  09-przesłanianie i statyczne wiązanie
declaration/tests/: DocGramatyka.txt  Makefile  ParGramatyka.y  PrintGramatyka.hs
experiments/: gramatyka.cf
experiments/simple gramatic with functor/: gramatyka.cf  readme.md
experiments/tests/: AbsGramatyka.hs  Interpreter.hs  ParGramatyka.hs  ParGramatyka.info  SkelGramatyka.hs
old top dir stuff/: makefile
other/: opis.txt
other/cabaltestdir/: cabaltestdir.cabal
paczka/: README.md  gramatyka.cf  kill_make.sh  makefile  mytest.sh  opis.txt  test.sh  tool.sh
paczka/bad/: RT-dzielenie-przez-zero.err  RT-dzielenie-przez-zero.jpp  SX-;-zamiast-,.err  SX-;-zamiast-,.jpp  SX-brak-().err  SX-brak-;.err  SX-brak-global.err  SX-brak-global.jpp  SX-brak-typu-global  SX-brak-typu-global.err  SX-brak-{}.err  SX-identyfikator-z-_.err  SX-identyfikator-z-_.jpp  SX-var-expr-01  SX-var-expr-01.err  SX-var-expr-02.err  SX-var-expr-02.jpp  TC-brak-main.err  TC-niezadeklarowana-funkcja.err  TC-niezadeklarowana-funkcja.jpp  TC-niezadeklarowana-zmienna-02.err  (+41 more)
pierdolone jaja/: Main.hs
release/: makefile
src/: AbsGrammar.hs  DocGrammar.txt  LexGrammar.hs  LexGrammar.x  Mock.hs  ParGrammar.hs  ParGrammar.info  ParGrammar.y  PrintGrammar.hs  SkelGrammar.hs  TestGrammar  main.hs
tests/: example  simple
(+114 files in other folders)
