cabal-version:      2.4
name:               JPP-interpreter
version:            0.1.0.0

author:             Mateusz Malinowski
-- maintainer:         malina314@op.pl

extra-source-files: CHANGELOG.md

executable interpreter
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    exposed-modules: BnfcParser
                     BnfcParser.AbsGramatyka

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.13.0.0
    hs-source-dirs:   src
    default-language: Haskell2010
